第二次提交

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="tip"><span>您的起始页目前是最新版</span></div>
             <div class="main">
                 <div class="time">
-                    <div class="timeText"><span></span>:<span></span></div>
+                    <div class="timeText"><span>00</span>:<span>00</span></div>
                 </div>
                 <div class="search_bar"><input placeholder="Search" onkeypress="getKey()"></div>
                 <div class=" text">
