第四次提交

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 </body>
 
-<script type="text/javascript" src="http://yijuzhan.com/api/word.php?m=js"></script>
+<script type="text/javascript" src="https://yijuzhan.com/api/word.php?m=js"></script>
 <script src="js/index.js"></script>
 
 
