第八次提交

--- a/index.html
+++ b/index.html
@@ -19,8 +19,31 @@
                 <div class="time">
                     <div class="timeText">00:00</div>
                 </div>
-                <div class="search_bar"><input placeholder="Search" onkeypress="getKey()"></div>
+                <div class="search_bar">
+                    <input placeholder="Search" onkeypress="getKey()">
+                    <div class="search_logo">
+                        <svg class="icon" viewBox="0 0 1035 1024" width="100%" height="100%">
+                            <path
+                                d="M1013.852766 1011.332492a42.225028 42.225028 0 0 1-59.70619 0L702.316509 759.502424a428.900723 428.900723 0 1 1 133.958901-196.00858 41.718328 41.718328 0 0 1-4.919216 14.166497c-1.330088 3.61024-2.385714 7.347155-3.800252 10.91517l-2.385714-2.385714a42.225028 42.225028 0 0 1-72.690386-29.13527l-0.380025-3.905815a41.950565 41.950565 0 0 1 11.379645-28.670794l-3.926928-3.905815a336.976836 336.976836 0 1 0-88.123633 150.764463 6.333754 6.333754 0 0 0 0.612262-0.928951l61.120729 1.055626 145.254096 145.232984 0.274463-0.274463 135.12009 135.12009a42.225028 42.225028 0 0 1 0.042225 59.79064z"
+                                fill="var(--bg-color)" p-id="4295">
+                            </path>
+                        </svg>
+                    </div>
+                </div>
                 <div class=" text">
+                    <div class="text-options">
+                        <svg t="1671096217357" class="icon" viewBox="0 0 1024 1024" width="100%" height="100%">
+                            <path d="M288 512m-64 0a64 64 0 1 0 128 0 64 64 0 1 0-128 0Z" fill="var(--bg-color)"></path>
+                            <path d="M512 512m-64 0a64 64 0 1 0 128 0 64 64 0 1 0-128 0Z" fill="var(--bg-color)"></path>
+                            <path d="M736 512m-64 0a64 64 0 1 0 128 0 64 64 0 1 0-128 0Z" fill="var(--bg-color)"></path>
+                        </svg>
+                    </div>
+                    <div class="text-options-box">
+                        <ul>
+                            <li class="copy">复制</li>
+                            <li class="sou">搜索</li>
+                        </ul>
+                    </div>
                     <li class="text-p">「 最是人间留不住，朱颜辞镜花辞树。 」</li>
                     <li class="text-name">—— 王国维</li>
                 </div>
