--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="base" id="base">
         <div class="bg"></div>
         <div class="body">
-            <div class="tip"><span>您的起始页目前是最新版</span></div>
+            <div class="tip"><span></span></div>
             <div class="main">
                 <div class="time">
                     <div class="timeText">00:00</div>
