第九次提交

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     </div>
                 </div>
                 <div class=" text">
+                    <div class="text-style"><span></span></div>
                     <div class="text-options">
                         <svg t="1671096217357" class="icon" viewBox="0 0 1024 1024" width="100%" height="100%">
                             <path d="M288 512m-64 0a64 64 0 1 0 128 0 64 64 0 1 0-128 0Z" fill="var(--bg-color)"></path>
@@ -46,6 +47,7 @@
                     </div>
                     <li class="text-p">「 最是人间留不住，朱颜辞镜花辞树。 」</li>
                     <li class="text-name">—— 王国维</li>
+
                 </div>
             </div>
         </div>
